ui screens added

--- a/templates/app_detail.html
+++ b/templates/app_detail.html
@@ -1,22 +1,13 @@
-<!-- templates/app_detail.html -->
+{% extends "base.html" %} {% block title %}{{ app.name }} - {{ project.name }}{%
+endblock title %} {% block body %}
+<h1>{{ app.name }}</h1>
+<p>
+  <strong>Repository URL:</strong>
+  <a href="{{ app.repository_url }}">{{ app.repository_url }}</a>
+</p>
+<p><strong>Build Type:</strong> {{ app.build_type }}</p>
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>{{ app.name }} - {{ project.name }}</title>
-  </head>
-  <body>
-    {% include "header.html" %}
-    <h1>{{ app.name }}</h1>
-    <p>
-      <strong>Repository URL:</strong>
-      <a href="{{ app.repository_url }}">{{ app.repository_url }}</a>
-    </p>
-    <p><strong>Build Type:</strong> {{ app.build_type }}</p>
-
-    <a href="{{ url_for('root.ci.project_detail', project_id=project.id) }}"
-      >Back to {{ project.name }} Apps</a
-    >
-    {% include "footer.html" %}
-  </body>
-</html>
+<a href="{{ url_for('root.ci.project_detail', project_id=project.id) }}"
+  >Back to {{ project.name }} Apps</a
+>
+{% endblock body%}
