--- a/templates/project_detail.html
+++ b/templates/project_detail.html
@@ -1,33 +1,26 @@
-<!-- templates/project_detail.html -->
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Project Detail</title>
-  </head>
-  <body>
-    {% include "header.html" %}
-    <h1>{{ project.name }}</h1>
-    <p>{{ project.description }}</p>
-    <div>
-      <h2>Apps : {{project.apps | length}}</h2>
-      <ul>
-        {% for app in project.apps %}
-        <li>
-          <h2>
-            <a
-              href="{{ url_for('root.ci.app_detail', project_id=project.id, app_id=app.id)}}"
-              >{{ app.name }}</a
-            >
-          </h2>
-          <p>{{ app.description }}</p>
-        </li>
-        {% endfor %}
-      </ul>
-      <a href="{{ url_for('root.ci.create_app', project_id=project.id) }}"
-        >Create New App</a
-      >
-    </div>
-    <a href="{{ url_for('root.ci.index') }}">Back to Projects</a>
-    {% include "footer.html" %}
-  </body>
-</html>
+{% extends "base.html" %} {% block title %}{{project.name}}{% endblock title %}
+{% block body %}
+<h1>{{ project.name }}</h1>
+<p>{{ project.description }}</p>
+<div>
+  <h2>Apps : {{project.apps | length}}</h2>
+  <ul>
+    {% for app in project.apps %}
+    <li>
+      <h2>
+        <a
+          href="{{ url_for('root.ci.app_detail', project_id=project.id, app_id=app.id)}}"
+          >{{ app.name }}</a
+        >
+      </h2>
+      <p>{{ app.description }}</p>
+    </li>
+    {% endfor %}
+  </ul>
+  <a href="{{ url_for('root.ci.create_app', project_id=project.id) }}"
+    >Create New App</a
+  >
+</div>
+<a href="{{ url_for('root.ci.index') }}">Back to Projects</a>
+
+{% endblock body %}
