--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,26 +1,45 @@
-<!-- templates/index.html -->
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Projects</title>
-  </head>
-  <body>
-    {% include "header.html" %}
-    <h1>Projects</h1>
-    <a href="{{ url_for('root.ci.create_project') }}">Create New Project</a>
-    <ul>
-      {% for project in projects %}
-      <li>
-        <h2>
+{% extends "base.html" %} {% block title %}Projects{% endblock title %} {% block
+body %}
+
+<table class="table table-striped table-hover">
+  <caption>
+    this table contains user scoped namespaces
+  </caption>
+  <thead>
+    <tr>
+      <th scope="col">
+        <div class="d-flex align-items-center justify-content-between">
+          <h3 class="text-primary">Projects</h3>
           <a
-            href="{{ url_for('root.ci.project_detail', project_id=project['id']) }}"
-            >{{ project['name'] }}</a
+            href="{{ url_for('root.ci.create_project') }}"
+            class="btn d-flex btn-success align-items-center justify-content-around"
+            ><span class="material-icons"> add </span> Add</a
           >
-        </h2>
-        <p>{{ project['description'] }}</p>
-      </li>
-      {% endfor %}
-    </ul>
-    {% include "footer.html" %}
-  </body>
-</html>
+        </div>
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for project in projects %}
+    <tr>
+      <td>
+        <a
+          class="d-flex justify-content-between text-decoration-none"
+          href="{{ url_for('root.ci.project_detail', project_id=project['id']) }}"
+        >
+          <div>
+            <h5>{{project.name}}</h5>
+            <p>{{project.description}}</p>
+          </div>
+          {% if project.active %}
+          <span class="material-icons text-success"> toggle_on </span>{% endif
+          %} {% if not project.active%}<span class="material-icons text-danger">
+            toggle_off </span
+          >{% endif %}
+        </a>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+{% endblock body %}
