--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -22,7 +22,9 @@ block body %}
     </div>
     <br />
     <button type="submit" class="btn btn-primary">Add</button>
-    <a href="{{ url_for('root.ci.index') }}" class="btn btn-danger"> Cancel </a>
+    <a href="{{ url_for('root.ci.projects') }}" class="btn btn-danger">
+      Cancel
+    </a>
   </form>
 </div>
 {% endblock body %}
