--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,21 @@
     <title>{% block title %}{% endblock title %}</title>
     <link href="/static/bs.css" rel="stylesheet" />
     <script src="/static/bs.js"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Deploy apps on RnCp. This app allows access your repo and receive webhooks to deploy new versions of your code any time you push."
+    />
+    <link rel="manifest" href="/static/manifest.json" />
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script src="/static/sw.js"></script>
   </head>
-  <body>
+  <body style="max-width: 100vw; max-height: 100vh" class="d-flex flex-column">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
         <button
@@ -27,10 +36,12 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="{{ url_for('root.ci.projects') }}"
+                >Projects</a
+              >
             </li>
           </ul>
           <form class="d-flex">
@@ -48,6 +59,8 @@
         </div>
       </div>
     </nav>
-    <div>{% block body %}{% endblock body %}</div>
+    <main class="d-flex flex-column flex-1 overflow-scroll">
+      {% block body %}{% endblock body %}
+    </main>
   </body>
 </html>
