--- a/templates/project_detail.html
+++ b/templates/project_detail.html
@@ -1,26 +1,85 @@
 {% extends "base.html" %} {% block title %}{{project.name}}{% endblock title %}
 {% block body %}
-<h1>{{ project.name }}</h1>
-<p>{{ project.description }}</p>
-<div>
-  <h2>Apps : {{project.apps | length}}</h2>
-  <ul>
+<table class="table table-striped table-hover">
+  <caption>
+    this table contains user scoped namespaces
+  </caption>
+  <thead>
+    <tr>
+      <th scope="col">
+        <div class="d-flex align-items-center justify-content-between">
+          <div class="text-primary d-flex flex-column">
+            <span class="fs-3">{{project.name}}</span>
+            <span class="fs-6 px-2">{{project.description}}</span>
+          </div>
+          <div class="d-flex">
+            <a
+              href="{{ url_for('root.ci.create_app', project_id=project.id) }}"
+              class="btn d-flex btn-success align-items-center justify-content-around"
+              ><span class="material-icons"> add </span> Add</a
+            >
+            {% if project.active %}
+            <form
+              action="{{url_for('root.ci.project_detail', project_id=project.id)}}"
+              class="px-2"
+              method="POST"
+            >
+              <input name="delete" hidden value="True" />
+              <button
+                type="submit"
+                class="btn btn-danger text-white d-flex align-items-center justify-content-around"
+              >
+                <span class="material-icons"> delete </span>Suspend
+              </button>
+            </form>
+            {% endif %} {% if not project.active %}
+            <form
+              action="{{url_for('root.ci.project_detail', project_id=project.id)}}"
+              method="POST"
+              class="px-2"
+            >
+              <input name="delete" hidden value="False" />
+              <button
+                type="submit"
+                class="btn btn-warning text-white d-flex align-items-center justify-content-around"
+              >
+                <span class="material-icons"> delete </span>Enable
+              </button>
+            </form>
+            {% endif %}
+          </div>
+        </div>
+      </th>
+    </tr>
+  </thead>
+  <tbody>
     {% for app in project.apps %}
-    <li>
-      <h2>
+    <tr>
+      <td>
         <a
-          href="{{ url_for('root.ci.app_detail', project_id=project.id, app_id=app.id)}}"
-          >{{ app.name }}</a
+          class="d-flex justify-content-between text-decoration-none"
+          href="{{ url_for('root.ci.app_detail', project_id=project.id, app_id=app.id) }}"
         >
-      </h2>
-      <p>{{ app.description }}</p>
-    </li>
+          <div>
+            <h5>{{app.name}}</h5>
+            <p>{{app.description}}</p>
+          </div>
+          {% if project.active %}
+          <span class="material-icons text-success"> toggle_on </span>{% endif
+          %} {% if not project.active%}<span
+            class="material-icons text-warning"
+          >
+            toggle_off </span
+          >{% endif %}
+        </a>
+      </td>
+    </tr>
     {% endfor %}
-  </ul>
-  <a href="{{ url_for('root.ci.create_app', project_id=project.id) }}"
-    >Create New App</a
-  >
+  </tbody>
+</table>
+<div class="d-flex justify-content-center">
+  <a href="{{ url_for('root.ci.projects') }}" class="btn btn-danger text-white">
+    Back
+  </a>
 </div>
-<a href="{{ url_for('root.ci.index') }}">Back to Projects</a>
-
 {% endblock body %}
