--- a/templates/clusters.html
+++ b/templates/clusters.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Projects{% endblock title %} {% block
+{% extends "base.html" %} {% block title %}Clusters{% endblock title %} {% block
 body %}
 <table class="table table-striped table-hover">
   <caption>
@@ -13,11 +13,11 @@ body %}
             class="text-decoration-none d-flex align-items-center justify-content-center"
           >
             <span class="material-icons"> navigate_before </span>
-            <span class="text-primary fs-3">Projects</span>
+            <span class="text-primary fs-3">Clusters</span>
           </a>
           <div class="d-flex">
             <a
-              href="{{ url_for('root.ci.create_project') }}"
+              href="{{ url_for('root.ci.create_cluster') }}"
               class="btn btn-success text-white d-flex align-items-center justify-content-around"
               ><span class="material-icons"> add </span>
               Add
@@ -28,20 +28,20 @@ body %}
     </tr>
   </thead>
   <tbody>
-    {% for project in projects %}
+    {% for cluster in clusters %}
     <tr>
       <td>
         <a
           class="d-flex justify-content-between text-decoration-none"
-          href="{{ url_for('root.ci.project_detail', project_id=project['id']) }}"
+          href="{{ url_for('root.ci.cluster_detail', cluster_id=cluster['id']) }}"
         >
           <div>
-            <h5>{{project.name}}</h5>
-            <p>{{project.description}}</p>
+            <h5>{{cluster.name}}</h5>
+            <p>{{cluster.description}}</p>
           </div>
-          {% if project.active %}
+          {% if cluster.active %}
           <span class="material-icons text-success"> toggle_on </span>{% endif
-          %} {% if not project.active%}<span class="material-icons text-danger">
+          %} {% if not cluster.active%}<span class="material-icons text-danger">
             toggle_off </span
           >{% endif %}
         </a>
