--- a/templates/project_detail.html
+++ b/templates/project_detail.html
@@ -1,85 +1,69 @@
 {% extends "base.html" %} {% block title %}{{project.name}}{% endblock title %}
 {% block body %}
-<table class="table table-striped table-hover">
-  <caption>
-    this table contains user scoped namespaces
-  </caption>
-  <thead>
-    <tr>
-      <th scope="col">
-        <div class="d-flex align-items-center justify-content-between">
-          <div class="text-primary d-flex flex-column">
-            <span class="fs-3">{{project.name}}</span>
-            <span class="fs-6 px-2">{{project.description}}</span>
-          </div>
-          <div class="d-flex">
-            <a
-              href="{{ url_for('root.ci.create_app', project_id=project.id) }}"
-              class="btn d-flex btn-success align-items-center justify-content-around"
-              ><span class="material-icons"> add </span> Add</a
-            >
-            {% if project.active %}
-            <form
-              action="{{url_for('root.ci.project_detail', project_id=project.id)}}"
-              class="px-2"
-              method="POST"
-            >
-              <input name="delete" hidden value="True" />
-              <button
-                type="submit"
-                class="btn btn-danger text-white d-flex align-items-center justify-content-around"
-              >
-                <span class="material-icons"> delete </span>Suspend
-              </button>
-            </form>
-            {% endif %} {% if not project.active %}
-            <form
-              action="{{url_for('root.ci.project_detail', project_id=project.id)}}"
-              method="POST"
-              class="px-2"
-            >
-              <input name="delete" hidden value="False" />
-              <button
-                type="submit"
-                class="btn btn-warning text-white d-flex align-items-center justify-content-around"
-              >
-                <span class="material-icons"> delete </span>Enable
-              </button>
-            </form>
-            {% endif %}
-          </div>
-        </div>
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for app in project.apps %}
-    <tr>
-      <td>
-        <a
-          class="d-flex justify-content-between text-decoration-none"
-          href="{{ url_for('root.ci.app_detail', project_id=project.id, app_id=app.id) }}"
-        >
-          <div>
-            <h5>{{app.name}}</h5>
-            <p>{{app.description}}</p>
-          </div>
-          {% if project.active %}
-          <span class="material-icons text-success"> toggle_on </span>{% endif
-          %} {% if not project.active%}<span
-            class="material-icons text-warning"
-          >
-            toggle_off </span
-          >{% endif %}
-        </a>
-      </td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-<div class="d-flex justify-content-center">
-  <a href="{{ url_for('root.ci.projects') }}" class="btn btn-danger text-white">
-    Back
-  </a>
+<div class="p-3">
+  <div class="d-flex align-items-center justify-content-start pb-3">
+    <span class="material-icons"> navigate_before </span>
+    <a
+      class="text-primary d-flex flex-column px-2 text-decoration-none"
+      href="{{ url_for('root.ci.projects') }}"
+    >
+      <span class="fs-3">{{project.name}}</span>
+      <span class="fs-6 text-secondary">{{project.description}}</span>
+    </a>
+  </div>
+  <nav>
+    <div class="nav nav-tabs px-4" id="nav-tab" role="tablist">
+      {% for nav in ["Quotas",'Apps','Billing', 'Settings'] %}
+      <button
+        class="nav-link {% if nav == 'Quotas' %}active{% endif %}"
+        id="nav-{{nav | lower}}-tab"
+        data-bs-toggle="tab"
+        data-bs-target="#nav-{{nav | lower}}"
+        type="button"
+        role="tab"
+        aria-controls="nav-{{nav | lower}}"
+        aria-selected="true"
+      >
+        {{nav}}
+      </button>
+      {% endfor %}
+    </div>
+  </nav>
+  <div class="tab-content" id="nav-tabContent">
+    {% with project=project %}
+    <div
+      class="tab-pane fade show active"
+      id="nav-quotas"
+      role="tabpanel"
+      aria-labelledby="nav-quotas-tab"
+    >
+      {% include "project_quotas.html" %}
+    </div>
+    <div
+      class="tab-pane fade show"
+      id="nav-apps"
+      role="tabpanel"
+      aria-labelledby="nav-apps-tab"
+    >
+      {% include "project_apps.html" %}
+    </div>
+    <div
+      class="tab-pane fade show"
+      id="nav-billing"
+      role="tabpanel"
+      aria-labelledby="nav-billing-tab"
+    >
+      {% include "project_billing.html" %}
+    </div>
+    <div
+      class="tab-pane fade show"
+      id="nav-settings"
+      role="tabpanel"
+      aria-labelledby="nav-settings-tab"
+    >
+      {% include "project_settings.html" %}
+    </div>
+    {% endwith %}
+  </div>
 </div>
 {% endblock body %}
