--- a/templates/project_settings.html
+++ b/templates/project_settings.html
@@ -7,7 +7,7 @@
       class="px-2"
     >
       <input
-        name="delete"
+        name="active"
         hidden
         value="{% if project.active %}True{% else %}False{% endif %}"
       />
@@ -17,6 +17,22 @@
       >
         <span class="material-icons"> delete </span>{% if project.active
         %}Suspend{% else %}Enable{% endif %}
+      </button>
+    </form>
+  </div>
+  <div class="d-flex justify-content-around py-3">
+    <span>Delete project</span>
+    <form
+      action="{{url_for('root.ci.project_detail', project_id=project.id)}}"
+      method="POST"
+      class="px-2"
+    >
+      <input name="delete" hidden value="True" />
+      <button
+        type="submit"
+        class="btn btn-danger text-white d-flex align-items-center justify-content-around"
+      >
+        <span class="material-icons"> delete </span>Delete
       </button>
     </form>
   </div>
