--- a/templates/app_detail.html
+++ b/templates/app_detail.html
@@ -1,21 +1,69 @@
 {% extends "base.html" %} {% block title %}{{ app.name }} - {{ project.name }}{%
 endblock title %} {% block body %}
-<h1>{{ app.name }}</h1>
-<p>
-  <strong>Repository URL:</strong>
-  <a href="{{ app.repository_url }}">{{ app.repository_url }}</a>
-</p>
-<p><strong>Build Type:</strong> {{ app.build_type }}</p>
-
-<a href="{{ url_for('root.ci.project_detail', project_id=project.id) }}"
-  >Back to {{ project.name }} Apps</a
->
-<div class="d-flex justify-content-center">
-  <a
-    href="{{ url_for('root.ci.project_detail', project_id=project.id) }}"
-    class="btn btn-danger text-white"
-  >
-    Back
-  </a>
+<div class="p-3">
+  <div class="d-flex align-items-center justify-content-start pb-3">
+    <span class="material-icons"> navigate_before </span>
+    <a
+      class="text-primary d-flex flex-column px-2 text-decoration-none"
+      href="{{ url_for('root.ci.project_detail', project_id=project.id) }}"
+    >
+      <span class="fs-3">{{app.name}}</span>
+      <span class="fs-6 text-secondary">{{app.description}}</span>
+    </a>
+  </div>
+  <nav>
+    <div class="nav nav-tabs px-4" id="nav-tab" role="tablist">
+      {% for nav in ["About", "Build",'Deploy', 'Settings'] %}
+      <button
+        class="nav-link {% if nav == 'About' %}active{% endif %}"
+        id="nav-{{nav | lower}}-tab"
+        data-bs-toggle="tab"
+        data-bs-target="#nav-{{nav | lower}}"
+        type="button"
+        role="tab"
+        aria-controls="nav-{{nav | lower}}"
+        aria-selected="true"
+      >
+        {{nav}}
+      </button>
+      {% endfor %}
+    </div>
+  </nav>
+  <div class="tab-content" id="nav-tabContent">
+    {% with project=project %}
+    <div
+      class="tab-pane fade show active"
+      id="nav-quotas"
+      role="tabpanel"
+      aria-labelledby="nav-quotas-tab"
+    >
+      {% include "project_quotas.html" %}
+    </div>
+    <div
+      class="tab-pane fade show"
+      id="nav-apps"
+      role="tabpanel"
+      aria-labelledby="nav-apps-tab"
+    >
+      {% include "project_apps.html" %}
+    </div>
+    <div
+      class="tab-pane fade show"
+      id="nav-billing"
+      role="tabpanel"
+      aria-labelledby="nav-billing-tab"
+    >
+      {% include "project_billing.html" %}
+    </div>
+    <div
+      class="tab-pane fade show"
+      id="nav-settings"
+      role="tabpanel"
+      aria-labelledby="nav-settings-tab"
+    >
+      {% include "project_settings.html" %}
+    </div>
+    {% endwith %}
+  </div>
 </div>
 {% endblock body%}
