new entity added

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="/static/sw.js"></script>
+    <script src="/static/main.js"></script>
   </head>
   <body style="max-width: 100vw; max-height: 100vh" class="d-flex flex-column">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
