--- a/templates/app_detail.html
+++ b/templates/app_detail.html
@@ -13,9 +13,9 @@ endblock title %} {% block body %}
   </div>
   <nav>
     <div class="nav nav-tabs px-4" id="nav-tab" role="tablist">
-      {% for nav in ["About", "Build",'Deploy', 'Settings'] %}
+      {% for nav in ["Stages","Build","Secrets"] %}
       <button
-        class="nav-link {% if nav == 'About' %}active{% endif %}"
+        class="nav-link {% if nav == 'Stages' %}active{% endif %}"
         id="nav-{{nav | lower}}-tab"
         data-bs-toggle="tab"
         data-bs-target="#nav-{{nav | lower}}"
@@ -30,38 +30,30 @@ endblock title %} {% block body %}
     </div>
   </nav>
   <div class="tab-content" id="nav-tabContent">
-    {% with project=project %}
+    {% with project=project, app=app %}
     <div
       class="tab-pane fade show active"
-      id="nav-quotas"
+      id="nav-stages"
       role="tabpanel"
-      aria-labelledby="nav-quotas-tab"
+      aria-labelledby="nav-stages-tab"
     >
-      {% include "project_quotas.html" %}
+      {% include "app_stages.html" %}
     </div>
     <div
       class="tab-pane fade show"
-      id="nav-apps"
+      id="nav-build"
       role="tabpanel"
-      aria-labelledby="nav-apps-tab"
+      aria-labelledby="nav-build-tab"
     >
-      {% include "project_apps.html" %}
+      {% include "app_builds.html" %}
     </div>
     <div
       class="tab-pane fade show"
-      id="nav-billing"
+      id="nav-secrets"
       role="tabpanel"
-      aria-labelledby="nav-billing-tab"
+      aria-labelledby="nav-secrets-tab"
     >
-      {% include "project_billing.html" %}
-    </div>
-    <div
-      class="tab-pane fade show"
-      id="nav-settings"
-      role="tabpanel"
-      aria-labelledby="nav-settings-tab"
-    >
-      {% include "project_settings.html" %}
+      {% include "app_secrets.html" %}
     </div>
     {% endwith %}
   </div>
