--- a/templates/project_settings.html
+++ b/templates/project_settings.html
@@ -36,4 +36,14 @@
       </button>
     </form>
   </div>
+  <div class="d-flex justify-content-around py-3">
+    <span>Delete project</span>
+    <button
+      onclick="onDelete(this,'{{url_for('root.ci.project_detail', project_id=project.id)}}')"
+      class="btn btn-danger text-white d-flex align-items-center justify-content-around"
+    >
+      <span class="material-icons"> delete </span>
+      Delete
+    </button>
+  </div>
 </div>
